# RobotHUD

./: .gitignore  .gitmodules  CMakeLists.txt
include/: Controller.h  Controller_Widget.h  EasyLoRa_Widget.h  EasyUDP_Widget.h  IOCommons.h  LoRaTransmisor.h  MatLabel.h  RobotHUD.h  RobotHUDExceptions.h  UDPTransmisor.h  VideoRecognizerConfiguration.h  VideoRecognizer_Widget.h
src/: Controller.cpp  Controller_Widget.cpp  EasyLoRa_Widget.cpp  EasyUDP_Widget.cpp  LoRaTransmisor.cpp  MatLabel.cpp  RobotHUD.cpp  UDPTransmisor.cpp  VideoRecognizerConfiguration.cpp  VideoRecognizer_Widget.cpp  main.cpp
ui/: Controller_Widget.ui  EasyLoRa_Widget.ui  EasyUDP_Widget.ui  RobotHUD.ui  VideoRecognizerConfiguration.ui
